// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonIcon is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonIcon euiButtonIcon--primary testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
/>
`;

exports[`EuiButtonIcon props color danger is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--danger"
  type="button"
/>
`;

exports[`EuiButtonIcon props color disabled is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--disabled"
  type="button"
/>
`;

exports[`EuiButtonIcon props color ghost is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--ghost"
  type="button"
/>
`;

exports[`EuiButtonIcon props color primary is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--primary"
  type="button"
/>
`;

exports[`EuiButtonIcon props color subdued is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--subdued"
  type="button"
/>
`;

exports[`EuiButtonIcon props color success is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--success"
  type="button"
/>
`;

exports[`EuiButtonIcon props color text is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--text"
  type="button"
/>
`;

exports[`EuiButtonIcon props color warning is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--warning"
  type="button"
/>
`;

exports[`EuiButtonIcon props href secures the rel attribute when the target is _blank 1`] = `
<a
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`EuiButtonIcon props iconType is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--primary"
  type="button"
>
  <svg
    aria-hidden="true"
    class="euiIcon euiIcon--medium euiIcon-isLoading euiButtonIcon__icon"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</button>
`;

exports[`EuiButtonIcon props isDisabled is rendered 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--primary"
  disabled=""
  type="button"
/>
`;

exports[`EuiButtonIcon props isDisabled renders a button even when href is defined 1`] = `
<button
  aria-label="button"
  class="euiButtonIcon euiButtonIcon--primary"
  disabled=""
  type="button"
/>
`;
